--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,9 @@ set -s escape-time 0
 # also ctrl-s
 set -g prefix2 C-s
 
+# mouse
+setw -g mouse on
+
 # Make tmux act like xterm to prevent Vim issues:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
@@ -23,7 +26,7 @@ bind-key C-b send-prefix
 bind-key C-s send-prefix -2
 
 # Shut up.
-set -g quiet on
+# set -g quiet on
 
 # Less stretching to get to the first item.
 set -g base-index 1
@@ -72,15 +75,30 @@ bind , command-prompt "rename-window '%%'"
 bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
 
 # Copy mode
+# -- copy mode -----------------------------------------------------------------
+
+bind Enter copy-mode # enter copy mode
+
+run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
+
+# copy to Mac OSX clipboard
+if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
+# copy to X11 clipboard
+if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
+if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
 setw -g mode-keys vi
 bind ` copy-mode
 bind P paste-buffer
-bind -t vi-copy H start-of-line
-bind -t vi-copy L end-of-line
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind -t vi-copy Escape cancel
-bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind p paste-buffer
 
 # Toggle synchronized panes for the current window
 bind S set synchronize-panes
