--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,9 @@ set -s escape-time 0
 set -g prefix2 C-s
 
 # mouse
-setw -g mouse on
+if-shell '[[ $(echo "$(tmux -V | cut -d" " -f2) >= 2.1" | bc) -eq 1 ]]' \
+    'set -g mouse on; bind m set -g mouse on \; display "Mouse ON"; bind M set -g mouse off \; display "Mouse OFF"' \
+    'set -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on; bind m set -g mode-mouse on \; set -g mouse-resize-pane on \; set -g mouse-select-pane on \; set -g mouse-select-window on \; display "Mouse ON"; bind M set -g mode-mouse off \; set -g mouse-resize-pane off \; set -g mouse-select-pane off \; set -g mouse-select-window off \; display "Mouse OFF"'
 
 # Make tmux act like xterm to prevent Vim issues:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -32,6 +34,12 @@ bind-key C-s send-prefix -2
 # Less stretching to get to the first item.
 set -g base-index 1
 setw -g pane-base-index 1
+
+# no bind and change panes
+bind -n C-k run-shell 'tmux-vim-select-pane -U'
+bind -n C-j run-shell 'tmux-vim-select-pane -D'
+bind -n C-h run-shell 'tmux-vim-select-pane -L'
+bind -n C-l run-shell 'tmux-vim-select-pane -R'
 
 # Reload the config.
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
@@ -106,27 +114,27 @@ bind p paste-buffer
 
 ##### APPEARANCE
 # Use Solarized colorscheme.
-set -g status-bg black #base02
-set -g status-fg yellow #yellow
-set -g status-attr default
-
-# Default window title colors.
-setw -g window-status-fg brightblue #base0
-setw -g window-status-bg default
-setw -g window-status-current-fg brightred #orange
-setw -g window-status-current-bg default
-
-# Pane border.
-set -g pane-border-fg black #base02
-set -g pane-active-border-fg brightgreen #base01
-
-# Message text.
-set -g message-bg black #base02
-set -g message-fg brightred #orange
-
-# Pane number display.
-set -g display-panes-active-colour blue #blue
-set -g display-panes-colour brightred #orange
+#set -g status-bg black #base02
+#set -g status-fg yellow #yellow
+#set -g status-attr default
+#
+## Default window title colors.
+#setw -g window-status-fg brightblue #base0
+#setw -g window-status-bg default
+#setw -g window-status-current-fg brightred #orange
+#setw -g window-status-current-bg default
+#
+## Pane border.
+#set -g pane-border-fg black #base02
+#set -g pane-active-border-fg brightgreen #base01
+#
+## Message text.
+#set -g message-bg black #base02
+#set -g message-fg brightred #orange
+#
+## Pane number display.
+#set -g display-panes-active-colour blue #blue
+#set -g display-panes-colour brightred #orange
 
 ## Custom status bar
 set -g status-left-length 32
