--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,10 +36,10 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # no bind and change panes
-bind -n C-k run-shell 'tmux-vim-select-pane -U'
-bind -n C-j run-shell 'tmux-vim-select-pane -D'
-bind -n C-h run-shell 'tmux-vim-select-pane -L'
-bind -n C-l run-shell 'tmux-vim-select-pane -R'
+# bind -n C-k run-shell 'tmux-vim-select-pane -U'
+# bind -n C-j run-shell 'tmux-vim-select-pane -D'
+# bind -n C-h run-shell 'tmux-vim-select-pane -L'
+# bind -n C-l run-shell 'tmux-vim-select-pane -R'
 
 # Reload the config.
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
