--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,9 @@ if-shell '[[ $(echo "$(tmux -V | cut -d" " -f2) >= 2.1" | bc) -eq 1 ]]' \
     'set -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on; bind m set -g mode-mouse on \; set -g mouse-resize-pane on \; set -g mouse-select-pane on \; set -g mouse-select-window on \; display "Mouse ON"; bind M set -g mode-mouse off \; set -g mouse-resize-pane off \; set -g mouse-select-pane off \; set -g mouse-select-window off \; display "Mouse OFF"'
 
 # Make tmux act like xterm to prevent Vim issues:
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+# set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+
 
 # Only resize the screen size if the smaller screen user has their window
 setw -g aggressive-resize on
