--- a/.taskrc
+++ b/.taskrc
@@ -26,7 +26,7 @@ data.location=~/.task
 #include /usr/local/share/doc/task/rc/dark-gray-256.theme
 #include /usr/local/share/doc/task/rc/dark-gray-blue-256.theme
 #include /usr/local/share/doc/task/rc/solarized-dark-256.theme
-include /usr/share/doc/task/rc/solarized-dark-256.theme
+#include /usr/share/doc/task/rc/solarized-dark-256.theme
 #include /usr/local/share/doc/task/rc/solarized-light-256.theme
 #include /usr/local/share/doc/task/rc/no-color.theme
 #
