MOved all over this land. prepping for a bigger move

--- a/.taskrc
+++ b/.taskrc
@@ -31,11 +31,59 @@ data.location=~/.task
 #include /usr/local/share/doc/task/rc/no-color.theme
 #
 taskd.server=taskwarrior.inthe.am:53589
-taskd.key=/home/matt/.task/private.key
-taskd.certificate=/home/matt/.task/private.cert
-taskd.ca=/home/matt/.task/ca.cert.pem
+taskd.key=/Users/matturbanski/.task/private.key.pem
+taskd.certificate=/Users/matturbanski/.task/private.certificate.pem
+taskd.ca=/Users/matturbanski/.task/ca.cert.pem
 taskd.credentials=inthe_am/ur.matt/03a342da-5f33-4c82-b676-b2768599a748
 taskd.trust=ignore hostname
 
-default.due=+7days
-default.status=active
+
+# Color theme (uncomment one to use)
+#color=on
+
+# default.due=tom
+default.priority=M
+recurrence.limit=1
+
+due=1
+monthsperline=3
+calendar.holidays=full
+
+report.list.description=Lists all tasks matching the specified criteria
+report.list.columns=id,project,priority,due.relative,due,depends,recur,urgency,tags,description
+report.list.labels=ID,Project,Pri,Rel,Due,Depends,Recur,Score,Tags,Description & Annotation
+report.list.sort=urgency-
+# report.list.sort=due+,priority-,project+
+report.list.filter=status:pending
+report.list.dateformat= a M-D
+alias.ls=list
+
+default.command=(due.before:4d or due: ) and status:pending list
+
+calendar.holidays=full
+include ~/.task/
+include /usr/local/Cellar/task/2.5.1/share/doc/task/rc/holidays.en-US.rc
+#include /home/roylez/.task/2013_holidays.rc
+#include /usr/share/doc/task/rc/holidays.en-US.rc
+
+urgency.next.coefficient=15.0                   # +next tag
+urgency.due.coefficient=100.0                    # overdue or near due date
+urgency.blocking.coefficient=8.0                # blocking other tasks
+urgency.priority.coefficient=6.0                # priority
+urgency.active.coefficient=4.0                  # already started tasks
+urgency.scheduled.coefficient=4.0               # scheduled tasks
+urgency.age.coefficient=0.0                     # Urgency coefficient for age
+urgency.annotations.coefficient=1.0             # has annotations
+urgency.tags.coefficient=1.0                    # has tags
+urgency.project.coefficient=1.0                 # assigned to any project
+urgency.blocked.coefficient=-50.0               # blocked by other tasks
+urgency.waiting.coefficient=-100.0                # waiting task
+urgency.user.tag.waiting.coefficient=-20.0       # specific project
+
+# urgency.user.project.<project>.coefficient=5.0  # specific project
+# urgency.user.tag.<tag>.coefficient=5.0          # specific tag
+# urgency.uda.<name>.coefficient=5.0 # specific UDA
+
+#default.due=+7days
+#default.status=active
+
