tmux mouse thing essentially

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,13 +3,31 @@ set -g prefix2 C-s
 
 ## mouse
 #if-shell '[[ $(echo "$(tmux -V | cut -d" " -f2) >= 2.1" | bc) -eq 1 ]]' \
-#    'set -g mouse on; bind m set -g mouse on \; display "Mouse ON"; bind M set -g mouse off \; display "Mouse OFF"' \
-#    'set -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on; bind m set -g mode-mouse on \; set -g mouse-resize-pane on \; set -g mouse-select-pane on \; set -g mouse-select-window on \; display "Mouse ON"; bind M set -g mode-mouse off \; set -g mouse-resize-pane off \; set -g mouse-select-pane off \; set -g mouse-select-window off \; display "Mouse OFF"'
+#    'set -g mouse on;
+#    bind m set -g mouse on \;
+#    display "Mouse ON";
+#    bind M set -g mouse off \;
+#    display "Mouse OFF"' \
+#    'set -g mode-mouse on
+#     set -g mouse-resize-pane on;
+#     set -g mouse-select-pane on;
+#     set -g mouse-select-window on;
+#     bind m set -g mode-mouse on \;
+#     set -g mouse-resize-pane on \;
+#     set -g mouse-select-pane on \;
+#     set -g mouse-select-window on \;
+#     display "Mouse ON";
+#     bind M set -g mode-mouse off \;
+#     set -g mouse-resize-pane off \;
+#     set -g mouse-select-pane off \;
+#     set -g mouse-select-window off \;
+#     display "Mouse OFF"'
 
 # Make tmux act like xterm to prevent Vim issues:
 # set -g terminal-overrides 'xterm*:smcup@:rmcup@'
     set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
+    set -g mouse on
 
 # Only resize the screen size if the smaller screen user has their window
     setw -g aggressive-resize on
@@ -40,6 +58,11 @@ set -g prefix2 C-s
     bind-key -T copy-mode-vi C-k select-pane -U
     bind-key -T copy-mode-vi C-l select-pane -R
     bind-key -T copy-mode-vi C-\ select-pane -l
+
+    #bind-key -T copy-mode-vi WheelUpPane scroll-up
+    #bind-key -T copy-mode-vi WheelDownPane scroll-down
+    bind -T copy-mode-vi WheelUpPane select-pane \; send-keys -X -N 2 scroll-up
+    bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 2 scroll-down
 
 # Reload the config.
     bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
