--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,7 @@ set -g prefix2 C-s
 # set -g terminal-overrides 'xterm*:smcup@:rmcup@'
     set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
-    set -g mouse on
+    # set -g mouse on
 
 # Only resize the screen size if the smaller screen user has their window
     setw -g aggressive-resize on
@@ -61,8 +61,8 @@ set -g prefix2 C-s
 
     #bind-key -T copy-mode-vi WheelUpPane scroll-up
     #bind-key -T copy-mode-vi WheelDownPane scroll-down
-    bind -T copy-mode-vi WheelUpPane select-pane \; send-keys -X -N 2 scroll-up
-    bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 2 scroll-down
+    #bind -T copy-mode-vi WheelUpPane select-pane \; send-keys -X -N 2 scroll-up
+    #bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 2 scroll-down
 
 # Reload the config.
     bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
@@ -146,3 +146,16 @@ set -g prefix2 C-s
 
 # Center the window list
     set -g status-justify centre
+
+# Genuinely not a clue till I try on linux
+#tmux_commands_with_legacy_scroll="nano less more man"
+#bind-key -T root WheelUpPane \
+#if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
+#'send -Mt=' \
+#'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
+#"send -t= Up Up Up" "copy-mode -et="'
+#bind-key -T root WheelDownPane \
+#if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
+#'send -Mt=' \
+#'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
+"send -t= Down Down Down" "send -Mt="'
